Fix modal overflowing & allow closing by ESC (#46)
* Fix modal overflowing

* Move FileModal to it's own component

* Close the FileModal with "esc" press

* Revert "modal-content" class remove

* Fix accessibility and add padding to sort buttons

--- a/frontend/src/components/Modal/Modal.module.scss
+++ b/frontend/src/components/Modal/Modal.module.scss
@@ -1,5 +1,5 @@
 .modal-background {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   bottom: 0;
