--- a/frontend/src/components/SortButton/SortButton.module.scss
+++ b/frontend/src/components/SortButton/SortButton.module.scss
@@ -8,3 +8,14 @@
     color: $accent;
   }
 }
+
+.clear-button {
+  background: none;
+  border: 0;
+  padding: 0;
+  margin: 0;
+}
+
+.sort-padding {
+  padding-left: 8px;
+}
